修改readme并引流

--- a/html/document.less
+++ b/html/document.less
@@ -43,7 +43,7 @@ body{
     height: var(--app-height);
 }
 a{
-    color: #a4c5e1;
+    color: #183044;
     text-decoration: none;
     cursor: pointer;
 }
@@ -137,7 +137,7 @@ canvas{
         margin-top:2px;
         border-radius:2px;
         &[data-active="true"]{
-            background: #182562;
+            background: #c0c8eb;
         }
     }
 }
